terraform/vpc.tf
# Fetch available availability zones in the region
data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

# Web Subnets
resource "aws_subnet" "web_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/19"
  availability_zone = data.aws_availability_zones.available.names[0]
}

resource "aws_subnet" "web_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/19"
  availability_zone = data.aws_availability_zones.available.names[1]
}

# App Subnets
resource "aws_subnet" "app_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.64.0/19"
  availability_zone = data.aws_availability_zones.available.names[0]
}

resource "aws_subnet" "app_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.96.0/19"
  availability_zone = data.aws_availability_zones.available.names[1]
}

# DB Subnets
resource "aws_subnet" "db_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.128.0/19"
  availability_zone = data.aws_availability_zones.available.names[0]
}

resource "aws_subnet" "db_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.160.0/19"
  availability_zone = data.aws_availability_zones.available.names[1]
}

# Reserved Subnets
resource "aws_subnet" "reserved_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.192.0/19"
  availability_zone = data.aws_availability_zones.available.names[0]
}

resource "aws_subnet" "reserved_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.224.0/19"
  availability_zone = data.aws_availability_zones.available.names[1]
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "app" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "app_1" {
  subnet_id      = aws_subnet.app_1.id
  route_table_id = aws_route_table.app.id
}

resource "aws_route_table_association" "app_2" {
  subnet_id      = aws_subnet.app_2.id
  route_table_id = aws_route_table.app.id
}

resource "aws_security_group" "app_sg" {
  vpc_id = aws_vpc.main.id

  # Allow inbound traffic (HTTP and SSH)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
